# cpp-switch-vs-fsm

./: .devcontainer.json  CMakeLists.txt  README.md
src/: benchmark.cpp  fsm.cpp  main.cpp  str_generator.cpp  switch_case.cpp
src/inc/: benchmark.h  fsm.h  main.h  str_generator.h  switch_case.h
